fix header spacing

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,6 +1,5 @@
 .header-shell {
   position: fixed;
-  padding-top: 10px;
   border-bottom: 1px solid #edeeee;
   width: 100%;
   background-color: white;
@@ -8,6 +7,7 @@
   max-height: 80px;
 
   .header-main{
+    padding: 5px 0px;
     max-width: 600px;
     margin-left: auto;
     margin-right: auto;
@@ -15,7 +15,7 @@
 
   .header-logo {
     float: left;
-    margin-top: 10px;
+    margin-top: 20px;
   }
 
   .header-logo > a {
@@ -26,7 +26,7 @@
 
   .search-bar {
     display: inline-block;
-    margin: 10px 70px;
+    margin: 20px 70px 0px 70px;
     position: fixed;
     min-width: 200px;
 
