--- a/app/assets/stylesheets/userpage.scss
+++ b/app/assets/stylesheets/userpage.scss
@@ -98,8 +98,7 @@
   }
 
   input:hover{
-    border: 1px solid #125688;
-    border-radius: 5px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
   }
 
   input:focus{
